New <markup/> for KitchenSink

--- a/examples/kitchen-sink/app/sections/forms.html
+++ b/examples/kitchen-sink/app/sections/forms.html
@@ -47,10 +47,13 @@
                 <li class="anchor" data-icon="edit">Example of search</li>
                 <li data-search="Type a search..."></li>
                 <li class="tip darker" data-icon="question mini">It's a special form element you must set the attribute data-search="Placeholder text"</li>
-            </ul>
-
-            <ul class="form">
-                 <li class="anchor" data-icon="edit">Example of range</li>
+                <li class="anchor" data-icon="edit">Example of type="*"</li>
+                <li>
+                    <input type="datetime" placeholder="Some datetime..." />
+                    <input type="date" placeholder="Some date..." />
+                    <input type="time" placeholder="Some time..." />
+                    <input type="month" placeholder="Some month..." />
+                </li>
                 <li> <input type="range"></li>
                 <li class="tip dark" data-icon="question mini">Only for iOS5 & Android 2.3+ Devices"</li>
             </ul>
