Changes in <markup/>

--- a/examples/test-pro/app/sections/local.html
+++ b/examples/test-pro/app/sections/local.html
@@ -3,3 +3,9 @@
 
     <article></article>
 </section>
+
+<section id="async-local2">
+    <header data-back="home"  data-title="Async Local Section"></header>
+
+    <article></article>
+</section>
