--- a/examples/test-pro/index.html
+++ b/examples/test-pro/index.html
@@ -110,14 +110,6 @@
         </article>
     </section>
 
-    <aside id="asi-1" class="scrollable current">
-        <div class="anchor">Users</div>
-        <a href="#art-1" data-target="article">Art-1</a>
-        <a href="#art-2" data-target="article">Art-2</a>
-        <div class="anchor">Users</div>
-        <a href="#sec-2" data-target="section">Sec-1</a>
-    </aside>
-
     <aside id="asi-2" class="onright">
         <a href="#art-1" data-target="article">Art-1</a>
         <a href="#sec-2" data-target="section">Sec-1</a>
@@ -197,6 +189,7 @@
     <script src="../../src/Lungo.Core.js"></script>
     <script src="../../src/Lungo.Dom.js"></script>
     <script src="../../src/Lungo.Service.js"></script>
+    <script src="../../src/Lungo.Constants.js"></script>
     <script src="../../src/router/Lungo.Router.js"></script>
     <script src="../../src/router/Lungo.Router.History.js" ></script>
     <script src="../../src/view/Lungo.View.Resize.js"></script>
