Changes on <markup/>

--- a/examples/test-pro/index.html
+++ b/examples/test-pro/index.html
@@ -60,7 +60,7 @@
 
 <body class="app">
 
-    <section id="sec-1" class="">
+    <section id="sec-1" class="pop">
         <header data-title="Test Asides">
             <a href="#asi-1" data-target="aside" class="button blue onleft">asi-1</a>
             <a href="#asi-2" data-target="aside" class="button green onright">sec-2</a>
@@ -104,7 +104,7 @@
         <article id="art-3" class="list indented scrollable"></article>
     </section>
 
-    <section id="sec-2">
+    <section id="sec-2" class="pop">
         <header data-back="home"></header>
         <article>
         </article>
@@ -115,7 +115,7 @@
         <a href="#sec-2" data-target="section">Sec-1</a>
     </aside>
 
-    <section id="test">
+    <section id="test" class="pop">
         <header data-title="Groupbar" class="extended" data-back="home">
             <nav class="onright">
                 <a href="#" data-article="list-added" class="button red" data-icon="up"></a>
