--- a/examples/test-pro/index.html
+++ b/examples/test-pro/index.html
@@ -56,11 +56,37 @@
             margin: 2px 0px 0px 2px;
         }
     </style>
+
+    <style>
+        @-webkit-keyframes flow-show {
+            0% { -webkit-transform: translateX(100%) scale(.7); }
+            50% { -webkit-transform: translateX(0%) scale(.7);}
+            100% { -webkit-transform: translateX(0%) scale(1);}
+        }
+
+        @-webkit-keyframes flow-show-revoke {
+            0% { -webkit-transform: translateX(0%) scale(1); }
+            50% { -webkit-transform: translateX(0%) scale(.7);}
+            100% { -webkit-transform: translateX(100%) scale(.7);}
+        }
+
+        @-webkit-keyframes flow-hide {
+            0% { -webkit-transform: translateX(0%) scale(1); }
+            50% { -webkit-transform: translateX(0%) scale(.7); }
+            100% { -webkit-transform: translateX(-100%) scale(.7); }
+        }
+
+        @-webkit-keyframes flow-hide-revoke {
+            0% { -webkit-transform: translateX(-100%) scale(.7); }
+            50% { -webkit-transform: translateX(0%) scale(.7);}
+            100% { -webkit-transform: translateX(0%) scale(1);}
+        }
+    </style>
 </head>
 
 <body class="app">
 
-    <section id="sec-1" class="pop">
+    <section id="sec-1" class="flow">
         <header data-title="Test Asides">
             <a href="#asi-1" data-target="aside" class="button blue onleft">asi-1</a>
             <a href="#asi-2" data-target="aside" class="button green onright">sec-2</a>
@@ -104,7 +130,7 @@
         <article id="art-3" class="list indented scrollable"></article>
     </section>
 
-    <section id="sec-2" class="pop">
+    <section id="sec-2" class="flow">
         <header data-back="home"></header>
         <article>
         </article>
@@ -115,7 +141,7 @@
         <a href="#sec-2" data-target="section">Sec-1</a>
     </aside>
 
-    <section id="test" class="pop">
+    <section id="test" class="flow">
         <header data-title="Groupbar" class="extended" data-back="home">
             <nav class="onright">
                 <a href="#" data-article="list-added" class="button red" data-icon="up"></a>
