Changes in <markup>

--- a/examples/test-pro/index.html
+++ b/examples/test-pro/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.form.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.colour.css">
     <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.icon.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.theme.pro.css">
+    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.theme.default.css">
     <style>
         .scroll-demo {
             background: #ccc;
@@ -86,7 +86,7 @@
 
 <body class="app">
 
-    <section id="sec-1" class="flow">
+    <section id="sec-1" class="flows">
         <header data-title="Test Asides">
             <a href="#asi-1" data-target="aside" class="button blue onleft">asi-1</a>
             <a href="#asi-2" data-target="aside" class="button green onright">sec-2</a>
@@ -103,8 +103,8 @@
 
         <article id="art-1" class="list indented">
             <ul class="form">
-
                 <li> <input type="range"></li>
+                <li data-progress="0%"></li>
             </ul>
             <ul class="form">
                 <li class="anchor" data-icon="edit">Example of select</li>
