Changes in Kitchen-Sink & Release Test

--- a/examples/test-pro/index.html
+++ b/examples/test-pro/index.html
@@ -86,7 +86,7 @@
 
 <body class="app">
 
-    <section id="sec-1" class="flows">
+    <section id="sec-1" class="flow">
         <header data-title="Test Asides">
             <a href="#asi-1" data-target="aside" class="button blue onleft">asi-1</a>
             <a href="#asi-2" data-target="aside" class="button green onright">sec-2</a>
