Some changes in stylesheets & <markup/>

--- a/examples/test-pro/app/sections/asides.html
+++ b/examples/test-pro/app/sections/asides.html
@@ -1,4 +1,4 @@
-<aside id="asi-1" class="scrollable">
+<aside id="asi-1" class="scrollable current">
     <div>
         <div class="title" data-count="33">Users</div>
         <a href="#art-1" data-target="article" data-count="33" data-icon="home">Art-1</a>
