Final <markup/> for kitchen-sink

--- a/examples/kitchen-sink/app/sections/forms.html
+++ b/examples/kitchen-sink/app/sections/forms.html
@@ -2,8 +2,9 @@
     <header data-title="Forms" class="extended" data-back="home">
         <nav class="groupbar">
             <a href="#form-inputs" data-target="article" class="current">Inputs</a>
-            <a href="#form-specials" data-target="article">Specials</a>
+            <a href="#form-others" data-target="article">Others</a>
             <a href="#form-switchs" data-target="article">Switchs</a>
+            <a href="#form-specials" data-target="article">Specials</a>
             <a href="#form-tips" data-target="article">Tips</a>
         </nav>
     </header>
@@ -41,7 +42,7 @@
         </div>
     </article>
 
-    <article id="form-specials" class="list">
+    <article id="form-others" class="list">
         <div class="indented">
             <ul class="form">
                 <li class="anchor" data-icon="edit">Example of search</li>
@@ -54,6 +55,17 @@
                     <input type="time" placeholder="Some time..." />
                     <input type="month" placeholder="Some month..." />
                 </li>
+                <li class="tip dark" data-icon="question mini">Only for iOS5 & Android 2.3+ Devices"</li>
+            </ul>
+        </div>
+    </article>
+
+    <article id="form-specials" class="list">
+        <div class="indented">
+            <ul class="form">
+                <li class="anchor" data-icon="edit">Example of progress</li>
+                <li data-progress="0%"></li>
+                <li class="anchor" data-icon="edit">Example of range</li>
                 <li> <input type="range"></li>
                 <li class="tip dark" data-icon="question mini">Only for iOS5 & Android 2.3+ Devices"</li>
             </ul>
