--- a/examples/kitchen-sink/app/sections/aside.html
+++ b/examples/kitchen-sink/app/sections/aside.html
@@ -1,5 +1,6 @@
 <aside id="kitchen-sink-scroll" class="scrollable">
     <div>
+        <div class="title">Select a option</div>
         <a href="#welcome" data-target="article" class="current" data-icon="wifi">Welcome</a>
         <a href="#navigation" data-target="section" data-icon="map">Navigation</a>
         <a href="#buttons" data-target="article" data-icon="plus" data-count="14">Buttons & Colours</a>
