--- a/examples/release-test/app/sections/navigation.html
+++ b/examples/release-test/app/sections/navigation.html
@@ -1,8 +1,7 @@
 <section id="navigation">
     <header data-back="home" data-title="Navigation">
         <nav class="onright">
-            <a href="#" class="current" class="current" data-count="23" data-icon="star"><abbr>asas</abbr></a>
-            <a href="#navigation-secondary" class="current" data-target="section" data-icon="right"><abbr>Edit</abbr></a>
+            <a href="#navigation-index" class="current" data-target="section"><abbr>Transitions</abbr></a>
         </nav>
     </header>
 
