Final test in App Release-Test

--- a/examples/kitchen-sink/app/sections/navigation.html
+++ b/examples/kitchen-sink/app/sections/navigation.html
@@ -1,7 +1,7 @@
 <section id="navigation">
     <header data-back="home" data-title="Navigation">
         <nav class="onright">
-            <a href="#navigation-index" class="current" data-target="section"><abbr>Transitions</abbr></a>
+            <a href="#navigation-index" class="button" data-target="section"><abbr>Transitions</abbr></a>
         </nav>
     </header>
 
