--- a/examples/release-test/app/sections/buttons-extra.html
+++ b/examples/release-test/app/sections/buttons-extra.html
@@ -1,17 +1,18 @@
 <section id="buttons-extra">
     <header data-back="home" data-title="Example of buttons">
         <nav class="onright">
-            <a href="#" class="button red " data-icon="add">With icon</a>
-            <a href="#" class="button arcticblue ">Text</a>
+            <a href="#" class="button">On right</a>
         </nav>
     </header>
 
     <footer>
         <nav class="onleft">
-            <a href="#" class="button blue ">Text</a>
-            <a href="#" class="button yellow " data-icon="left"></a>
+            <a href="#" class="button blue ">Only Text</a>
+            <a href="#" class="button yellow" data-icon="left"></a>
         </nav>
-        <a href="#" class="button orange onright" data-icon="right">onright</a>
+        <nav class="onright">
+            <a href="#" class="button red" data-icon="add">With icon</a>
+        </nav>
     </footer>
 
     <article></article>
