--- a/examples/release-test/app/sections/forms.html
+++ b/examples/release-test/app/sections/forms.html
@@ -2,9 +2,8 @@
     <header data-title="Forms" class="extended" data-back="home">
         <nav class="groupbar">
             <a href="#form-inputs" data-target="article" class="current">Inputs</a>
-            <a href="#form-others" data-target="article">Others</a>
+            <a href="#form-others" data-target="article">Extras</a>
             <a href="#form-switchs" data-target="article">Switchs</a>
-            <a href="#form-specials" data-target="article">Specials</a>
             <a href="#form-tips" data-target="article">Tips</a>
         </nav>
     </header>
@@ -45,28 +44,15 @@
     <article id="form-others" class="list">
         <div class="indented">
             <ul class="form">
-                <li class="anchor" data-icon="edit">Example of search</li>
-                <li data-search="Type a search..."></li>
-                <li class="tip darker" data-icon="question mini">It's a special form element you must set the attribute data-search="Placeholder text"</li>
-                <li class="anchor" data-icon="edit">Example of type="*"</li>
+                <li class="anchor" data-icon="edit">Example of range</li>
+                <li> <input type="range"></li>
+                <li class="anchor" data-icon="edit">Example of type="date"</li>
                 <li>
                     <input type="datetime" placeholder="Some datetime..." />
                     <input type="date" placeholder="Some date..." />
                     <input type="time" placeholder="Some time..." />
                     <input type="month" placeholder="Some month..." />
                 </li>
-                <li class="tip dark" data-icon="question mini">Only for iOS5 & Android 2.3+ Devices"</li>
-            </ul>
-        </div>
-    </article>
-
-    <article id="form-specials" class="list">
-        <div class="indented">
-            <ul class="form">
-                <li class="anchor" data-icon="edit">Example of progress</li>
-                <li data-progress="0%"></li>
-                <li class="anchor" data-icon="edit">Example of range</li>
-                <li> <input type="range"></li>
                 <li class="tip dark" data-icon="question mini">Only for iOS5 & Android 2.3+ Devices"</li>
             </ul>
         </div>
